Adds Top Listener Data and re-structures the User Data file tree

--- a/src/css/GoldifyExecutePage.css
+++ b/src/css/GoldifyExecutePage.css
@@ -1,12 +1,6 @@
 .goldify-page-container {
   margin: 2%;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
+  display: flex;
 }
 
 .title {
