--- a/src/css/TrackDataTable.css
+++ b/src/css/TrackDataTable.css
@@ -1,45 +1,65 @@
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('ProximaNova.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   margin: auto;
   top: 0;
 }
 
-table {
-  top: 0;
+.track-data-table-container {
+  margin: 0 4%;
+}
+
+.track-data-table-header {
+  color: black;
+  font-size: 20pt;
+  font-family: Proxima Nova;
+  float: left;
+}
+
+.track-data-table-header-container {
 	width: 800px;
   margin: auto;
+}
+
+.track-data-table {
+  top: 0;
+	width: 800px;
+  margin: 5% 0;
 	border-collapse: collapse;
 	overflow: hidden;
 	box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
-th, td {
+.track-data-th, .track-data-td {
 	padding: 15px;
 	background-color: rgba(255,255,255,0.2);
   color: #000;
 }
 
-td img {
+.track-data-td img {
   max-height: 100px;
 }
 
-th {
+.track-data-th {
 	text-align: center;
-}
-
-thead th {
 	background-color: #FCC201;
   color: #fff !important;
 }
 
-tbody tr:hover {
+.track-data-tr:hover {
   background-color: rgb(225,225,225);
 }
 
-tbody td {
+.track-data-td {
   position: relative;
 }
 
-tbody td:hover:before {
+.track-data-td:hover:before {
   content: "";
   position: absolute;
   left: 0;
