--- a/src/css/TrackDataTable.css
+++ b/src/css/TrackDataTable.css
@@ -69,3 +69,16 @@
   background-color: rgb(255,255,255);
   z-index: -1;
 }
+
+.top-listens-add-track, .goldify-playlist-remove-button {
+  cursor: pointer;
+}
+
+.goldify-playlist-cancel-button {
+  float: right;
+}
+
+.goldify-playlist-save-button {
+  margin-right: 30px !important;
+  float: right;
+}
