--- a/src/css/UserInfo.css
+++ b/src/css/UserInfo.css
@@ -1,13 +1,26 @@
 .card {
-    position: sticky;
-    height: min-content;
-    top: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 250px;
-    left: 5%;
-    text-align: center;
-  }
+  position: sticky;
+  height: min-content;
+  top: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 250px;
+  left: 5%;
+  text-align: center;
+}
 
-  .card img {
-    width: 100%;
-  }
+.card img {
+  width: 100%;
+}
+
+.view-profile {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
