--- a/src/css/GoldifySoloPage.css
+++ b/src/css/GoldifySoloPage.css
@@ -1,12 +1,7 @@
 .goldify-page-container {
   margin: 2%;
-  display: flex;
 }
 
-.title {
-  color: grey;
-  font-size: 18px;
-}
 
 a {
   text-decoration: none;
@@ -14,6 +9,6 @@ a {
   color: black;
 }
 
-button:hover, a:hover {
+button:hover {
   opacity: 0.7;
 }
