--- a/src/css/TrackDataTable.css
+++ b/src/css/TrackDataTable.css
@@ -1,15 +1,26 @@
 .container {
   margin: auto;
+  display: flow-root;
   top: 0;
 }
 
 .track-data-table-container {
-  overflow-x: auto;
-  margin: auto;
+  display: block;
+  overflow: auto;
+  align-items: center;
+  max-width: 100%;
 }
 
-.top-listens-table-container {
-  margin-top: 30px;
+.track-data-table-inner-container {
+  overflow-y: auto;
+  height: 360px;
+  width: 100%;
+}
+
+.track-data-table-inner-container thead th {
+  position: sticky;
+  top: 0;
+  z-index: 10001;
 }
 
 .track-data-table-header {
@@ -33,8 +44,9 @@
 
 .track-data-table {
   width: 100%;
+  height: 100%;
 	border-collapse: collapse;
-	overflow: hidden;
+	overflow: auto;
 	box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
@@ -68,12 +80,20 @@
   color: #fff !important;
 }
 
+.track-data-tr {
+  text-align: center;
+  margin: auto;
+}
+
 .track-data-tr:hover {
   background-color: rgb(225,225,225);
 }
 
 .track-data-td {
   position: relative;
+  text-align: center;
+  margin: auto;
+  vertical-align: middle;
 }
 
 .top-listens-add-track, .goldify-playlist-remove-button {
@@ -95,4 +115,41 @@
   display: block;
   height: 36px;
   margin: auto;
+  text-align: left;
+}
+
+.move-row-icon {
+  position: relative;
+  top: 1px;
+  display: block;
+  width: 18px;
+  height: 11px;
+  opacity: .25;
+  margin: auto;
+  cursor: row-resize;
+  background: -webkit-linear-gradient(
+    top,#000,#000 20%,#fff 0,#fff 40%,#000 0,#000 60%,#fff 0,#fff 80%,#000 0,#000
+  );
+  background: linear-gradient(
+    180deg,#000,#000 20%,#fff 0,#fff 40%,#000 0,#000 60%,#fff 0,#fff 80%,#000 0,#000
+  );
+}
+
+@media only screen and (min-width: 600px) {
+  .track-data-table-container {
+    display: inline-block;
+    width: 48%;
+    margin: 1%;
+    float: none !important;
+  }
+
+  .track-data-table-inner-container {
+    height: 630px;
+  }
+
+  .goldify-update-buttons {
+    top: auto;
+    z-index: auto;
+    position: unset;
+  }
 }
