Adds links to Spotify, as well as to Goldify playlist, around the application
This also makes mention that Goldify is powered by Spotify

--- a/src/css/GoldifyApp.css
+++ b/src/css/GoldifyApp.css
@@ -1,6 +1,12 @@
-.goldify-app {
+.goldify-app, .goldify-footer {
   text-align: center;
   width: 100%;
+}
+
+.goldify-footer-img {
+  height: 20px;
+  vertical-align: bottom;
+  margin: 0 5px;
 }
 
 .goldify-logo {
