--- a/src/css/GoldifySoloPage.css
+++ b/src/css/GoldifySoloPage.css
@@ -2,13 +2,15 @@
   margin: 2%;
 }
 
-
 a {
   text-decoration: none;
-  font-size: 22px;
   color: black;
 }
 
 button:hover {
   opacity: 0.7;
+}
+
+.notification-snack-bar {
+  z-index: 10047 !important;
 }
