--- a/src/css/UserInfo.css
+++ b/src/css/UserInfo.css
@@ -2,9 +2,6 @@
   cursor: pointer;
   display: flex;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.4);
-  margin-bottom: 1%;
-  text-align: left;
-  width: fit-content;
   border-radius: 20px;
   background-color: #191414;
   border: 4px solid #1DB954;
@@ -69,4 +66,12 @@
 
 .spotify-logo img {
   height: 70px;
+}
+
+@media only screen and (min-width: 600px) {
+  .card {
+    margin-bottom: 1%;
+    text-align: left;
+    width: fit-content;
+  }
 }
