--- a/src/css/GoldifyCreatePlaylist.css
+++ b/src/css/GoldifyCreatePlaylist.css
@@ -1,5 +1,5 @@
 .create-playlist-wrapper {
-  background-color: #0B162A;
+  background-color: #212121;
   padding: 10px;
   margin: 5% auto;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.4);
