--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,13 +5,25 @@
   font-style: normal;
 }
 
+html {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
+  height: 100%;
   margin: 0;
   font-family: 'Proxima Nova', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  min-height: 100%;
+  height: 100%;
 }
 
 code {
