--- a/src/css/GoldifyApp.css
+++ b/src/css/GoldifyApp.css
@@ -2,7 +2,7 @@
   text-align: center;
   width: 100%;
   min-height: 100%;
-  height: 100%;
+  position: relative;
 }
 
 .goldify-footer-img {
@@ -29,7 +29,7 @@
   width: calc(50% - 50px);
   height: 100%;
   display: inline-block;
-  color: #FCC201;
+  color: #fcc201;
   vertical-align: top;
   text-align: left;
 }
@@ -58,7 +58,7 @@
 }
 
 .goldify-tab {
-  color: #FCC201 !important;
+  color: #fcc201 !important;
   vertical-align: middle;
   text-align: right !important;
 }
@@ -68,11 +68,11 @@
   max-height: 100px;
   color: #fff;
   text-align: center;
-  background-color:#212121;
+  background-color: #212121;
 }
 
 .goldify-header:after {
-  content: '';
+  content: "";
   top: 0;
   left: 0;
   width: 100%;
@@ -82,20 +82,18 @@
 
 .goldify-footer {
   display: flex;
+  position: absolute;
+  bottom: 0;
+  margin-top: 40px;
   text-align: center;
   width: 100%;
   height: 40px;
   color: white;
   background-color: #212121;
   z-index: 30000;
+  overflow: hidden;
 }
 
 .goldify-footer-container {
   margin: auto;
-}
-
-@media only screen and (min-width: 600px) {
-  .goldify-footer {
-    margin-top: -40px;
-  }
 }
