Adds link to home on Goldify header text

--- a/src/css/GoldifyApp.css
+++ b/src/css/GoldifyApp.css
@@ -34,8 +34,9 @@
   text-align: left;
 }
 
-.goldify-title h1 {
+.goldify-title-h1 {
   font-size: 2.5em;
+  color: #fcc201;
 }
 
 .goldify-tabs-bar {
